--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,16 +7,22 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-brands-svg-icons": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/vue-fontawesome": "^3.0.0-5",
     "axios": "^0.26.1",
     "core-js": "^3.8.3",
     "moment": "^2.29.1",
     "serve": "^13.0.2",
+    "sharp": "^0.30.3",
     "vue": "^3.2.13",
     "vue-router": "^4.0.14",
     "vue3-simple-file-input": "^1.0.3",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^6.1.1",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-service": "~5.0.0"
   }
